# CppJACK

./: .gitignore  .gitmodules  CMakeLists.txt  CppJack.cpp  CppJack.h  README.md  example_client.cpp  get_updates  initial_setup  setup
demo/: CMakeLists.txt  example_client  example_client.cpp
include/: CMakeLists.txt  CppJack.h  defs.h
lib/: CMakeLists.txt
src/: CMakeLists.txt  CppJack.cpp  exceptions.hpp
test/: CMakeLists.txt  inout.cpp  output.cpp  test_inout.cpp  test_output.cpp  testing_framework.h
